[package]
name = "mmap"
version = "0.1.0"
authors = ["Rick Branson <rick@diodeware.com>", "The Rust Project Developers"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rbranson/rust-mmap"
homepage = "https://github.com/rbranson/rust-mmap"
description = """
A library for dealing with memory-mapped I/O
"""

[dependencies]
libc = "0.1.6"
tempdir = "0.3"
